# ProxVoice

./: .gitignore  README.md
.github/workflows/: app.yml  client.yml  mod.yml  release.yml
client/: Cargo.toml  forge.config.js  map.csv  package.json  proxvoice.config.example.yml
client/src/: config.html  config.js  config.rs  devtools.html  devtools.js  discord.rs  index.js  json.rs  main.rs  map.rs  setup.html  setup.js
mod/: build.gradle
mod/src/main/java/com/aditsachde/proxvoice/: ProxVoice.java
mod/src/main/resources/: mcmod.info
server/: requirements.txt  webserver.py  webserver.spec
